src/test/ui/arg-count-mismatch.rs
// error-pattern: parameters were supplied

fn f(x: isize) { }

fn main() { let i: (); i = f(); }
